# camera

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
cargokit/: README
cargokit/.github/workflows/: test_example_plugin_build.yml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: camera.podspec
lib/: camera_plugin.dart  camera_plugin_bindings_generated.dart
linux/: CMakeLists.txt  camera_plugin.cc  camera_plugin_private.h
linux/include/camera/: camera_plugin.h
linux/test/: camera_plugin_test.cc
macos/: camera.podspec  camera_plugin.podspec
macos/Classes/: CameraPlugin.swift
rust/: Cargo.toml  build.rs  camera_plugin_bindings.h
rust/src/: lib.rs
windows/: CMakeLists.txt  camera_plugin.cpp  camera_plugin.h  camera_plugin_c_api.cpp
windows/include/camera/: camera_plugin_c_api.h
windows/test/: camera_plugin_test.cpp
(+3 files in other folders)
