[package]
name = "camera_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
opencv = "0.56.0"  # OpenCV Rust bindings
image = "0.23.14"  # Image processing library

[build-dependencies]
cbindgen = "= 0.24.3"
glob = "0.3.1"
